Fix overlapping mobile footer

--- a/src/components/mobile-only/menu-footer/menu-footer-styles.module.scss
+++ b/src/components/mobile-only/menu-footer/menu-footer-styles.module.scss
@@ -8,8 +8,8 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  position: fixed;
-  bottom: 0%;
+  position: absolute;
+  bottom: 0;
   width: 100%;
   z-index: 15;
 }
